<resources>
    <string name="app_name">I AM LOCO</string>
    <string name="title_activity_map_view">choose location</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login_header_label">Login</string>
    <string name="slogon">Discover how to get things done or earn</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="dummy_details">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam asperiores, aut commodi consectetur consequuntur deserunt dicta esse eveniet facilis mollitia nam natus nisi obcaecati possimus praesentium quae quo, similique voluptate</string>
    <string name="open">drawer opened</string>
    <string name="closed">drawer closed</string>
    <string name="title_activity_add_job">AddJobActivity</string>
    <string name="title_activity_track_job">TrackJobActivity</string>
    <string name="title_activity_view_profile">ViewProfileActivity</string>
    <string name="title_activity_job_history">JobHistoryActivity</string>
    <string name="title_activity_chat">ChatActivity</string>

    <string name="job_notification_title_template">Job: %1$s</string>

     <string name="job_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor
        sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper
        venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis. Pellentesque
        vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper ornare lacus. Duis
        ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis viverra rhoncus sit amet
        nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_online_users">OnlineUsers</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_payment">PaymentActivity</string>

    <!--payment-->
    <string name="addPayment">Add Payment Method</string>
    <string name="paymentMethods">Payment Methods</string>

    <string name="endingIn">Card ending in </string>
    <string name="progressMessage">Creating Token&#8230;</string>
    <string name="validationErrors">Validation Errors</string>

    <string name="cardNumber">Card Number</string>
    <string name="save">Save</string>
    <string name="cvc">CVC</string>

    <string name="ok">OK</string>

    <string-array name="currency_array">
        <item>Currency (optional)</item>
        <item>Unspecified</item>
        <item>USD</item>
    </string-array>
    <string-array name="year_array">
        <item>Year</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>

    <string-array name="month_array">
        <item>Month</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

</resources>
